<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_premieres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/premieres"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_all_premieres"
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_premiers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_premieres"
                tools:listitem="@layout/home_premieres_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/top_250"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_all_top"
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_top"
                app:reverseLayout="false"
                tools:listitem="@layout/home_popular_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_all_popular"
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_popular"
                app:reverseLayout="false"
                tools:listitem="@layout/home_popular_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_series"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_all_series"
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_series"
                app:reverseLayout="false"
                tools:listitem="@layout/home_series_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_random_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_random_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/countryRu"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tv_title_random_genre"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_all_random"
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_random_genre"
                app:reverseLayout="false"
                tools:listitem="@layout/home_popular_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>